ld/testsuite/ld-arm/group-relocs-ldrs-bad.s
@@ -6,8 +6,8 @@
 	.globl _start
 
 _start:
-	add	r0, r0, #:sb_g0_nc:(bar)
-	ldrd	r2, [r0, #:sb_g1:(bar)]
+	add	r0, r0, #:pc_g0_nc:(bar)
+	ldrd	r2, [r0, #:pc_g1:(bar + 4)]
 
 @ We will place the section foo at 0x8000100.
 
